--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ buildscript {
         def junit_version = '4.13.2'
         def lifecycle_version = '2.1.0'
         def livedata_version = '2.2.0-rc02'
-        def material_version = '1.5.0-rc01'
+        def material_version = '1.1.0-alpha09'
         def retrofit_gson_version = '2.6.2'
         def retrofit_version = '2.9.0'
         def room_version = '2.4.0'
